v1.10.1 (unit tests re-activated; dependency updates; gradle-wrapper update)